--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "pretendard": "^1.3.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "typescript": "^5.3.3"
   },
   "resolutions": {
     "styled-components": "^6.1.6"
   },
   "devDependencies": {
-    "@tata-v/eslint-config-react": "^1.0.11",
+    "@tata-v/eslint-config-react": "^1.0.12",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
@@ -34,10 +35,9 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
     "styled-components": "^6.1.6",
+    "tailwindcss": "^3.4.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
     "vite": "^5.0.10"
   }
 }
