--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.css"],
+  "exclude": ["libs"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
