--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nextui-org/modal": "^2.0.28",
+    "@nextui-org/system": "^2.0.15",
+    "@nextui-org/theme": "^2.1.17",
+    "@types/react-router-dom": "^5.3.3",
+    "eslint-config-airbnb": "^19.0.4",
+    "framer-motion": "^11.0.3",
     "pretendard": "^1.3.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,7 +27,7 @@
     "styled-components": "^6.1.6"
   },
   "devDependencies": {
-    "@tata-v/eslint-config-react": "^1.0.13",
+    "@tata-v/eslint-config-react": "^1.0.22",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
@@ -33,10 +39,14 @@
     "autoprefixer": "^10.4.16",
     "briefy-design": "^1.0.2",
     "eslint": "^8.56.0",
-    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
     "styled-components": "^6.1.6",
+    "tailwind-variants": "^0.1.13",
     "tailwindcss": "^3.4.0",
     "ts-node": "^10.9.2",
     "vite": "^5.0.10"
