--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/modal": "^2.0.28",
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.17",
+    "@reactuses/core": "^4.0.13",
     "@types/react-router-dom": "^5.3.3",
     "eslint-config-airbnb": "^19.0.4",
     "framer-motion": "^11.0.3",
