--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "@nextui-org/theme": "^2.1.17",
     "@reactuses/core": "^4.0.13",
     "@types/react-router-dom": "^5.3.3",
+    "date-fns": "^3.3.1",
     "eslint-config-airbnb": "^19.0.4",
     "framer-motion": "^11.0.3",
+    "lodash": "^4.17.21",
     "pretendard": "^1.3.9",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-lottie-player": "^1.5.6",
     "react-router-dom": "^6.21.1",
     "swiper": "^11.0.5",
@@ -32,8 +37,10 @@
   },
   "devDependencies": {
     "@tata-v/eslint-config-react": "^1.0.22",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.46",
+    "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^18.2.18",
     "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
