feat: CreateMailModal 제작

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-iframe": "^1.8.5",
     "react-lottie-player": "^1.5.6",
     "react-router-dom": "^6.21.1",
     "swiper": "^11.0.5",
@@ -48,7 +49,7 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "app": "^0.1.0",
     "autoprefixer": "^10.4.16",
-    "briefy-design": "^1.1.6",
+    "briefy-design": "^1.1.8",
     "eslint": "^8.56.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
