--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.17",
     "@reactuses/core": "^4.0.13",
+    "@tanstack/react-query": "^5.51.15",
+    "@tanstack/react-query-devtools": "^5.51.15",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.2",
     "date-fns": "^3.3.1",
     "eslint-config-airbnb": "^19.0.4",
     "framer-motion": "^11.0.3",
@@ -26,6 +29,7 @@
     "pretendard": "^1.3.9",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
+    "react-cookie": "^7.2.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -41,6 +45,7 @@
   },
   "devDependencies": {
     "@tata-v/eslint-config-react": "^1.0.22",
+    "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.46",
@@ -53,7 +58,7 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "app": "^0.1.0",
     "autoprefixer": "^10.4.16",
-    "briefy-design": "^1.1.8",
+    "briefy-design": "^1.1.9",
     "eslint": "^8.56.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
